# INGCOM-UNRN-PII.github.io

./: .gitignore  ANÁLISIS_ENCAPSULAMIENTO_HERENCIA.md  MCP_CONFIG.md  README.md  _config.yml  authors.yml  convenciones_codigo_java.md  footer.md  glosario.md  myst.yml  pyproject.toml  reglas.md
.github/: copilot-instructions.md
apunte/: 01_origenes.md  02_lenguaje.md  03_tipos_de_datos.md  04_metodos.md  04b_varargs.md  05_sintaxis_control.md  06_entrada_salida.md  07_gradle.md  08_junit.md  09_arreglos.md  10_excepciones.md  11_testing.md  12_archivos.md  13_memoria.md  1A_origenes.md  1B_lenguaje.md  2_junit.md
apunte_2/: 01_oop_fundamentos.md  02_oop_relaciones.md  03_sintaxis_clases.md  04_oop_herencia_polimorfismo.md  05_herencia_polimorfismo.md  06_excepciones.md  07_colecciones_genericos.md  08_oop_refactoring.md  09_oop_solid.md  10_oop_patrones.md  11_oop_testing.md  12_oop_antipatrones.md  13_oop_contratos.md
apunte_3/: indice.md
catedra/: acuerdo_ia.md  programa.md
editorial/: contribuciones_externas.md  estado_y_mantenimiento.md  estilo_y_formato.md  indice.md  infografias_svg.md  plantilla_capitulos.md
ejemplos/: ArgumentosVariables.java  ArreglosEjemplos.java  CaracteristicasLenguaje.java  Circulo.java  ClasesInternas.java  ControlFlujo.java  EjemploColecciones.java  EjemploInterfaces.java  EjemploRecursion.java  EntradaSalida.java  GenericosEjemplo.java  GestionExcepciones.java  ManejoArchivos.java  ManejoFechas.java  Matematica.java  MatematicaTest.java  MemoriaYStrings.java  Metodos.java  OrigenesJava.java  PatronObserver.java  Punto.java  (+4 more)
(+145 files in other folders)
